# micro-lang

./: .gitmodules  CMakeLists.txt  README.md  test.zsh
examples/: middle-expression.m  simple-a-plus-b.m  simple-minuses.m  simple-variable.m  various-space-and-tabs.m
include/: asm.hpp  codegen.hpp  debug.hpp  grammar.hpp
src/: main.cpp
tests/: middle-expression.out  simple-a-minus-b.out  various-space-and-tabs.out
